# nuenki-languages

./: README.md  demo_input.txt  gen_demo_input.py  gen_frontend.py  gen_webext.py  generate_webext_config.py  language_types.py  languages.toml  old_ext.json  old_web.json  propagate_configuration.py  seo_input.txt
LanguagesStoreRs/: Cargo.toml  build.rs
LanguagesStoreRs/src/: lib.rs
