[package]
name = "Languages"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
serde = { version = "1.0", features = ["derive"] }

savefile = "0.17"
savefile-derive = "0.17"

[build-dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"
